--- a/index.html
+++ b/index.html
@@ -8,60 +8,41 @@
 </head>
 <body>
 
-<!-- Header / Navigatie -->
+<!-- Header / Hamburger-menu -->
 <header>
-    <h1>Supermoto Lifestyle</h1>
-    <nav>
+    <div class="logo">Supermoto Lifestyle</div>
+    <div class="hamburger" id="hamburger">&#9776;</div>
+    <nav id="nav-menu">
         <a href="#home">Home</a>
-        <a href="#about">Over ons</a>
-        <a href="#gallery">Galerij</a>
-        <a href="#contact">Contact</a>
+        <a href="#blog">Blog</a>
         <a href="#socials">Socials</a>
+        <a href="#countdown">Countdown</a>
+        <a href="#shop">Shop</a>
     </nav>
 </header>
 
 <!-- Home Sectie -->
-<section id="home" class="section hero">
+<section id="home" class="section" style="background-color:#1abc9c;">
     <h2>Welkom bij Supermoto Lifestyle</h2>
-    <p>De plek voor alles rond supermoto: events, tips en community.</p>
+    <p>Alles over supermoto, events, tips en community.</p>
 </section>
 
-<!-- Over ons Sectie -->
-<section id="about" class="section">
-    <h2>Over ons</h2>
-    <p>Supermoto Lifestyle is een community en platform voor iedereen die van supermoto houdt. Van tips en tricks tot evenementen en races, wij brengen de wereld van supermoto dichter bij jou.</p>
-</section>
-
-<!-- Galerij Sectie -->
-<section id="gallery" class="section">
-    <h2>Galerij</h2>
-    <div class="gallery">
-        <img src="images/supermoto1.jpg" alt="Supermoto foto 1">
-        <img src="images/supermoto2.jpg" alt="Supermoto foto 2">
-        <img src="images/supermoto3.jpg" alt="Supermoto foto 3">
-    </div>
-</section>
-
-<!-- Contact Sectie -->
-<section id="contact" class="section">
-    <h2>Contact</h2>
-    <form action="mailto:jouremail@example.com" method="post" enctype="text/plain">
-        <label for="name">Naam:</label>
-        <input type="text" id="name" name="name" required>
-
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required>
-
-        <label for="message">Bericht:</label>
-        <textarea id="message" name="message" rows="5" required></textarea>
-
-        <button type="submit">Verstuur</button>
-    </form>
+<!-- Blog Sectie -->
+<section id="blog" class="section" style="background-color:#3498db;">
+    <h2>Blog</h2>
+    <article>
+        <h3>Tips voor beginners</h3>
+        <p>Leer de basis van supermoto rijden met onze tips.</p>
+    </article>
+    <article>
+        <h3>Supermoto events</h3>
+        <p>De komende races en evenementen die je niet mag missen.</p>
+    </article>
 </section>
 
 <!-- Socials Sectie -->
-<section id="socials" class="section">
-    <h2>Volg ons op Socials</h2>
+<section id="socials" class="section" style="background-color:#9b59b6;">
+    <h2>Volg ons</h2>
     <p>
         <a href="#" target="_blank">Instagram</a> | 
         <a href="#" target="_blank">Facebook</a> | 
@@ -69,103 +50,27 @@
     </p>
 </section>
 
-<!-- Footer -->
+<!-- Countdown Sectie -->
+<section id="countdown" class="section" style="background-color:#e67e22;">
+    <h2>Live Countdown</h2>
+    <p id="countdown-text"></p>
+</section>
+
+<!-- Shop Sectie -->
+<section id="shop" class="section" style="background-color:#e74c3c;">
+    <h2>Supermoto Shop</h2>
+    <p>Koop hier je accessoires, kleding en onderdelen.</p>
+    <ul>
+        <li>Helm - €120</li>
+        <li>Handschoenen - €40</li>
+        <li>Motorbanden - €250</li>
+    </ul>
+</section>
+
 <footer>
     <p>© 2025 Supermoto Lifestyle</p>
 </footer>
 
+<script src="js/script.js"></script>
 </body>
 </html>
-/* css/style.css */
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background: #f5f5f5;
-    color: #333;
-    scroll-behavior: smooth; /* scroll naar secties */
-}
-
-/* Header */
-header {
-    position: sticky;
-    top: 0;
-    background: #222;
-    color: white;
-    padding: 15px;
-    text-align: center;
-    z-index: 1000;
-}
-
-header h1 {
-    margin: 0;
-}
-
-header nav a {
-    color: white;
-    margin: 0 10px;
-    text-decoration: none;
-    font-weight: bold;
-}
-
-header nav a:hover {
-    text-decoration: underline;
-}
-
-/* Secties */
-.section {
-    padding: 60px 20px;
-    text-align: center;
-}
-
-.hero {
-    background: url('../images/supermoto-hero.jpg') center/cover no-repeat;
-    color: white;
-}
-
-/* Galerij */
-.gallery {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 10px;
-}
-
-.gallery img {
-    width: 30%;
-    border-radius: 5px;
-}
-
-/* Contact formulier */
-form {
-    display: flex;
-    flex-direction: column;
-    max-width: 400px;
-    margin: auto;
-}
-
-form input, form textarea, form button {
-    margin-bottom: 10px;
-    padding: 10px;
-    font-size: 16px;
-}
-
-button {
-    background: #222;
-    color: white;
-    border: none;
-    cursor: pointer;
-}
-
-button:hover {
-    background: #555;
-}
-
-/* Footer */
-footer {
-    background: #222;
-    color: white;
-    text-align: center;
-    padding: 15px;
-    margin-top: 20px;
-}
