--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@ nav a:hover {
     text-align: center;
     padding: 20px;
     box-sizing: border-box;
+    overflow-y: auto;
 }
 
 .tab-content h1 {
@@ -93,6 +94,7 @@ nav a:hover {
 #countdown { background: #e67e22; }
 #shop { background: #e74c3c; }
 #contact { background: #2ecc71; }
+#media { background: #34495e; }
 
 /* SHOP ITEMS */
 .product {
@@ -113,6 +115,19 @@ nav a:hover {
 }
 .socials a:hover { color: red; }
 
+/* MEDIA TAB */
+.media-gallery {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+}
+
+.media-gallery img, .media-gallery video {
+    max-width: 300px;
+    border-radius: 10px;
+    border: 2px solid red;
+}
 </style>
 </head>
 
@@ -127,6 +142,7 @@ nav a:hover {
         <a onclick="openTab('socials')">Socials</a>
         <a onclick="openTab('countdown')">Countdown</a>
         <a onclick="openTab('shop')">Shop</a>
+        <a onclick="openTab('media')">Media</a>
         <a onclick="openTab('contact')">Contact</a>
     </nav>
 </header>
@@ -163,6 +179,21 @@ nav a:hover {
     <div class="product">🔥 Sticker Pack – €15</div>
 </div>
 
+<!-- MEDIA TAB -->
+<div id="media" class="tab-content">
+    <h1>Media</h1>
+    <div class="media-gallery">
+        <!-- FOTO'S -->
+        <img src="https://i.imgur.com/O2Vh5Hu.jpeg" alt="Supermoto Foto">
+        <img src="https://i.imgur.com/3s0c6Kx.jpeg" alt="Supermoto Foto 2">
+        <!-- VIDEO'S -->
+        <video controls>
+            <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+    </div>
+</div>
+
 <div id="contact" class="tab-content">
     <h1>Contact</h1>
     <p>Email: <strong>supermoto@life.com</strong></p>
@@ -182,7 +213,7 @@ function openTab(tabName) {
         t.classList.remove("active");
     }
     document.getElementById(tabName).classList.add("active");
-    document.getElementById("menu").style.display = "none"; // sluit menu
+    document.getElementById("menu").style.display = "none";
 }
 
 /* COUNTDOWN TIMER */
