--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ nav a:hover {
 
 <div id="contact" class="tab-content">
     <h1>Contact</h1>
-    <p>Email: <strong>supermoto@life.com</strong></p>
+    <p>Email: <strong>dj.zinix@gmail.com</strong></p>
 </div>
 
 <script>
@@ -228,9 +228,10 @@ setInterval(function () {
     let seconds = Math.floor((distance % (1000*60)) / 1000);
 
     document.getElementById("timer").innerHTML =
-        days + "d " + hours + "h " + minutes + "m " + seconds + "s";
+        days + "100d " + hours + "h " + minutes + "m " + seconds + "s";
 }, 1000);
 </script>
 
 </body>
 </html>
+
