--- a/index.html
+++ b/index.html
@@ -4,175 +4,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Supermoto Life</title>
-
-<style>
-body {
-    margin: 0;
-    font-family: Arial, sans-serif;
-    color: white;
-    overflow-x: hidden;
-}
-
-/* HEADER */
-header {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    background: black;
-    padding: 15px 20px;
-    z-index: 1000;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border-bottom: 2px solid red;
-}
-
-.logo {
-    font-size: 24px;
-    font-weight: bold;
-    color: red;
-}
-
-.hamburger {
-    font-size: 32px;
-    cursor: pointer;
-    color: white;
-}
-
-/* NAV MENU */
-nav {
-    display: none;
-    flex-direction: column;
-    background: rgba(0,0,0,0.95);
-    position: fixed;
-    top: 60px;
-    right: 20px;
-    border: 1px solid red;
-    border-radius: 10px;
-    z-index: 1001;
-}
-
-nav a {
-    padding: 12px 20px;
-    color: white;
-    text-decoration: none;
-    font-weight: bold;
-}
-
-nav a:hover {
-    color: red;
-}
-
-/* FULL SCREEN TABS */
-.tab-content {
-    width: 100vw;
-    height: 100vh;
-    display: none;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    text-align: center;
-    padding: 20px;
-    box-sizing: border-box;
-    overflow-y: auto;
-}
-
-.tab-content h1 {
-    font-size: 50px;
-    margin-bottom: 20px;
-}
-
-/* ACTIVE TAB */
-.active {
-    display: flex !important;
-}
-
-/* KLEUREN PER TAB */
-#home { background: #1abc9c; }
-#blog { background: #3498db; }
-#socials { background: #9b59b6; }
-#countdown { background: #e67e22; }
-#shop { background: #e74c3c; }
-#media { background: #34495e; }
-#contact { background: #2ecc71; }
-
-/* PRODUCTEN / MEDIA */
-.product, .media-gallery img, .media-gallery video {
-    border-radius: 10px;
-    max-width: 300px;
-    margin: 10px;
-    border: 2px solid red;
-}
-
-.product {
-    background: rgba(0,0,0,0.4);
-    padding: 15px;
-    text-align: center;
-}
-
-/* SOCIALS LINKS */
-.socials a {
-    color: white;
-    font-size: 24px;
-    margin: 0 15px;
-    text-decoration: none;
-}
-.socials a:hover { color: red; }
-
-/* MEDIA TAB */
-.media-gallery {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 20px;
-}
-
-/* LIGHTBOX */
-#lightbox {
-    display:none;
-    position:fixed;
-    top:0; left:0;
-    width:100%; height:100%;
-    background:rgba(0,0,0,0.9);
-    justify-content:center;
-    align-items:center;
-    z-index:10000;
-}
-
-/* ORDER FORM */
-#order-form {
-    display:none;
-    position:fixed;
-    top:50%; left:50%;
-    transform:translate(-50%,-50%);
-    background:black;
-    padding:30px;
-    border:2px solid red;
-    border-radius:15px;
-    z-index:10001;
-    width:90%;
-    max-width:400px;
-}
-#order-form input, #order-form textarea {
-    width:100%;
-    padding:8px;
-    margin:5px 0;
-}
-#order-form button {
-    width:100%;
-    padding:10px;
-    margin-top:5px;
-    border:none;
-    border-radius:5px;
-    color:white;
-    cursor:pointer;
-}
-#order-form .submit-btn { background:red; }
-#order-form .cancel-btn { background:#555; }
-
-</style>
+<link rel="stylesheet" href="css/style.css">
 </head>
-
 <body>
 
 <header>
@@ -221,7 +54,6 @@ nav a:hover {
 <div id="shop" class="tab-content">
     <h1>Shop</h1>
     <div class="media-gallery">
-        <!-- PRODUCT 1 -->
         <div class="product">
             <img src="https://i.imgur.com/O2Vh5Hu.jpeg" alt="Handschoenen" onclick="openLightbox(this)">
             <h2>Supermoto Handschoenen</h2>
@@ -229,7 +61,6 @@ nav a:hover {
             <p>Prijs: €49</p>
             <button onclick="openOrderForm('Supermoto Handschoenen')">Bestel / Contact</button>
         </div>
-        <!-- PRODUCT 2 -->
         <div class="product">
             <img src="https://i.imgur.com/3s0c6Kx.jpeg" alt="Racing Helm" onclick="openLightbox(this)">
             <h2>Racing Helm</h2>
@@ -237,7 +68,6 @@ nav a:hover {
             <p>Prijs: €199</p>
             <button onclick="openOrderForm('Racing Helm')">Bestel / Contact</button>
         </div>
-        <!-- PRODUCT 3 -->
         <div class="product">
             <img src="https://i.imgur.com/8f3ZQxB.jpeg" alt="Sticker Pack" onclick="openLightbox(this)">
             <h2>Sticker Pack</h2>
@@ -270,7 +100,7 @@ nav a:hover {
 <!-- LIGHTBOX -->
 <div id="lightbox">
     <img id="lightbox-img" src="">
-    <span style="position:absolute;top:20px;right:40px;font-size:50px;color:white;cursor:pointer;" onclick="closeLightbox()">×</span>
+    <span onclick="closeLightbox()">×</span>
 </div>
 
 <!-- BESTEL FORM -->
@@ -287,60 +117,6 @@ nav a:hover {
     </form>
 </div>
 
-<script>
-/* HAMBURGER MENU */
-function toggleMenu() {
-    let menu = document.getElementById("menu");
-    menu.style.display = (menu.style.display === "flex") ? "none" : "flex";
-}
-
-/* OPEN TAB */
-function openTab(tabName) {
-    let tabs = document.getElementsByClassName("tab-content");
-    for (let t of tabs) {
-        t.classList.remove("active");
-    }
-    document.getElementById(tabName).classList.add("active");
-    document.getElementById("menu").style.display = "none";
-}
-
-/* COUNTDOWN TIMER */
-let targetDate = new Date("Dec 31, 2025 00:00:00").getTime();
-setInterval(function () {
-    let now = new Date().getTime();
-    let distance = targetDate - now;
-
-    let days = Math.floor(distance / (1000*60*60*24));
-    let hours = Math.floor((distance % (1000*60*60*24)) / (1000*60*60));
-    let minutes = Math.floor((distance % (1000*60*60)) / (1000*60));
-    let seconds = Math.floor((distance % (1000*60)) / 1000);
-
-    document.getElementById("timer").innerHTML =
-        days + "d " + hours + "h " + minutes + "m " + seconds + "s";
-}, 1000);
-
-/* LIGHTBOX FUNCTIES */
-function openLightbox(img) {
-    document.getElementById('lightbox').style.display = 'flex';
-    document.getElementById('lightbox-img').src = img.src;
-}
-function closeLightbox() {
-    document.getElementById('lightbox').style.display = 'none';
-}
-
-/* BESTEL FORMULIER */
-function openOrderForm(productName) {
-    document.getElementById('order-form').style.display = 'block';
-    document.getElementById('product-name').innerText = productName;
-    document.getElementById('form-product').value = productName;
-}
-function closeOrderForm() {
-    document.getElementById('order-form').style.display = 'none';
-}
-</script>
-
+<script src="js/script.js"></script>
 </body>
 </html>
-
-
-
