--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Supermoto Life</title>
 <link rel="stylesheet" href="css/style.css">
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -22,10 +23,11 @@
     </nav>
 </header>
 
-<!-- HOME -->
-<div id="home" class="tab-content active">
-    <h1>Welkom bij Supermoto Life</h1>
-    <p>Dé lifestyle site voor supermoto riders 🔥</p>
+<!-- HERO / HOME -->
+<div id="home" class="tab-content active hero">
+    <h1>Supermoto Life</h1>
+    <p>Dé lifestyle site voor supermoto riders</p>
+    <img src="https://i.imgur.com/O2Vh5Hu.jpeg" alt="Supermoto Hero">
 </div>
 
 <!-- BLOG -->
