--- a/index.html
+++ b/index.html
@@ -25,20 +25,21 @@
     <main>
         <section class="hero">
             <h2>Welkom bij Supermoto World</h2>
-            <p>Alles over supermotos: modellen, geschiedenis en trainingstips!</p>
+            <p>Alles over supermotos!</p>
         </section>
 
         <section class="intro">
             <h3>Waarom Supermoto?</h3>
-            <p>Supermotos combineren snelheid, behendigheid en adrenaline. Perfect voor zowel beginners als ervaren rijders.</p>
+            <p>Supermotos combineren snelheid en adrenaline.</p>
         </section>
     </main>
 
     <footer>
         <p>&copy; 2025 Supermoto World | Volg ons op 
-            <a href="#">Instagram</a>, 
-            <a href="#">Facebook</a>
+            <a href="https://www.instagram.com/exc_zinix">Instagram</a>, 
+            
         </p>
     </footer>
 </body>
 </html>
+
